# ppt-agent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  cli.py  pyproject.toml  train.py
backend/: config.py  main.py
backend/agent/: engine.py  prompts.py
backend/api/: routes.py
backend/input_parser/: pptx_parser.py  text_parser.py
backend/quality_gate/: gate.py  tier1_rules.py  tier2_vlm.py
backend/renderer/: html_renderer.py  pdf_exporter.py
backend/renderer/static/: slides.js  style.css
backend/renderer/templates/: base_slide.html.j2  index.html.j2
backend/renderer/templates/components/: bar_chart.html.j2  bullet_list.html.j2  card_grid.html.j2  flow.html.j2  highlight_box.html.j2
backend/schemas/: __init__.py  intent.py  render_spec.py
backend/trainer/: comparator.py  corpus.py  feedback.py  loop.py  optimizer.py  regenerator.py  report.py  steps.py
docs/superpowers/plans/: 2026-03-31-plan1-core-pipeline.md
docs/superpowers/specs/: 2026-03-31-ppt-agent-design.md
skill/: SKILL.md  ppt-train.md
tests/: conftest.py  test_agent_engine.py  test_api.py  test_health.py  test_html_renderer.py  test_pdf_exporter.py  test_pptx_parser.py  test_quality_gate.py  test_schemas.py  test_text_parser.py  test_trainer.py
